# usb_transfer_tool

./: .gitignore  Makefile  README.md  usbTransferTool0.4.rar
USB_TRANSFER/: meta.xml
meta/: meta.xml
sd/: usbTransferTool0.2.rar
sd/res/: drcBack.tga  tvBack.tga
sd/wiiu/apps/USB_TRANSFER/: meta.xml  usb_helper_transfer_tool.elf
src/: CMakeLists.txt  background.c  background.h  ftp.c  ftp.h  iosuhax.h  iosuhax_disc_interface.h  link.ld  main.c  net.c  virtualpath.c  virtualpath.h  vrt.c
src/common/: common.h  fs_defs.h  types.h
src/dynamic_libs/: fs_functions.c  fs_functions.h  gx2_functions.c  os_functions.c  os_functions.h  socket_functions.h  sys_functions.c  sys_functions.h
src/fs/: fs_utils.c  sd_fat_devoptab.c
src/system/: memory.c
src/utils/: logger.c  utils.h
wiiu/apps/USB_TRANSFER/: meta.xml  usb_helper_transfer_tool.elf
